# BorisBrain_V2

./: .gitignore  CMakeLists.txt  README.md
include/: aerial-mapper-grid-map.h  aerial-mapper-io.h  block-matching-base.h  block-matching-bm.h  block-matching-sgbm.h  common.h  densifier.h  dsm.h  ortho-backward-grid.h  ortho-forward-homography.h  ortho-from-pcl.h  rectifier.h  stereo.h  utils-nearest-neighbor.h
include/aslam/cameras/: ncamera.h
include/aslam/cameras/yaml/: camera-yaml-serialization.h  ncamera-yaml-serialization.h
include/grid_map_cv/: GridMapCvConverter.hpp  GridMapCvProcessing.hpp
src/aslam/: CMakeLists.txt
src/aslam/cameras/: camera-yaml-serialization.cpp  ncamera-yaml-serialization.cpp
src/aslam/common/: sensor.cc
src/dense_pcl/: block-matching-bm.cpp  block-matching-sgbm.cpp  densifier.cpp  rectifier.cpp  stereo.cpp
src/dsm/: dsm.cc
src/grid_map/: aerial-mapper-grid-map.cc
src/io/: aerial-mapper-io.cc
src/ortho/: ortho-backward-grid.cc  ortho-forward-homography.cc  ortho-from-pcl.cc
src/programs/: BorisBrainV2_RT.cpp  BorisBrainV2_RT_Ortho.cpp
src/utils/: CMakeLists.txt  utils-common.cc
src/utils/EXIF_Parsing/: CMakeLists.txt  MetadataExtractor.cpp  TinyEXIF.cpp  tinyxml2.cpp
src/utils/GridMap/gridmap_core/iterators/: SlidingWindowIterator.cpp
